projects/01-static-site/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-site
  labels:
    app: static-site
  annotations:
    demo: "semana3-dia6"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: static-site
  template:
    metadata:
      labels:
        app: static-site
    spec:
      containers:
      - name: nginx
        image: ghcr.io/fernando-angolar/static-site:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-config
          mountPath: /usr/share/nginx/html
          readOnly: true
      volumes:
      - name: html-config
        configMap:
          name: static-site-config
