projects/01-static-site/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-site-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: static.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-site-service
                port:
                  number: 80
